@@ -1,3 +1,3 @@
 @echo off
 cd /d "%~dp0"
-start javaw -jar "dist\Dftech.jar"
+start javaw --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED -jar "dist\Dftech.jar"
